# fembed

./: Cargo.toml  README.md
src/: main.rs
templates/: error.html  image.html  no_url.html  text.html
